[package]
name = "ha-tkpd"
description = "Track Tokopedia prices on Home Asssistant via MQTT"
homepage = "https://github.com/angeloanan/ha-tkpd-tracker"

repository = "https://github.com/angeloanan/ha-tkpd-tracker"
version = "0.1.0"
edition = "2024"

license = "GPL-3.0-or-later"
keywords = ["tokopedia", "homeassistant", "tracker"]
categories = ["automation"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3     # Optimize for binary size - P.S, default release is 3 anyway
strip = true      # Remove debug symbols

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.12.14", features = [
    "blocking",
    "json",
    "rustls-tls",
    "rustls-tls-webpki-roots",
] }
rumqttc = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
openssl = { version = "*", features = ["vendored"] } # https://blog.davidvassallo.me/2021/06/10/lessons-learned-building-statically-linked-rust-binaries-openssl/
